Add DOMContentLoaded event to .js

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 		<div class="col-sm-7">
 			<div class="game-rules">
 			  <p> <strong> Directions: </strong> Press any key to start entering letters in the "Current Musician" section.</p> <br>
-			<div id="curPhrase" class="current-musician">
+			<div id="blankPhrase" class="current-musician">
 			  <p> <strong>Current Musician</strong> </p>
-			  <p id="word">_ _ _ </p>
+			  <p id="word">   </p>
 			</div>
 			<div class="guesses-remaining">
 				<p> <strong>Number of Guesses Remaining:</strong> 1</p>
