Trying to fix issue with placing letters into blanks correctly.

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 		<div class="col-sm-7">
 			<div class="game-rules">
 			  <p> <strong> Directions: </strong> Press any key to start entering letters in the "Current Musician" section.</p> <br>
-			<div id="blankPhrase" class="current-musician">
+			<div  class="current-musician">
 			  <p> <strong>Current Musician</strong> </p>
 			  <p id="word">   </p>
 			</div>
 			<div class="guesses-remaining">
 				<p> <strong>Number of Guesses Remaining:</strong> 1</p>
 		  </div>
-		  <div id="lettersGuessed" class="lettersGuessed">
-				<p> <strong>Letters Guessed:</strong> A,</p>
+		  <div class="lettersGuessed">
+				<p id="lettersGuessed"> <strong>Letters Guessed:</strong> A,</p>
 		  </div>
 		  <div class="wins">
 		  		<i class="far fa-star fa-spin fa-1x fa-fw "></i> <strong>WINS:</strong> 1 
