Trying to add number of guesses.

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
 			  <p id="word">   </p>
 			</div>
 			<div class="guesses-remaining">
-				<p> <strong>Number of Guesses Remaining:</strong> 1</p>
+				<p> <strong>Number of Guesses Remaining:</strong> </p>
+				<p id="guessesRemaining"> </p>
 		  </div>
 		  <div class="lettersGuessed">
 				<p id="lettersGuessed"> <strong>Letters Guessed:</strong> A,</p>
 		  </div>
 		  <div class="wins">
-		  		<i class="far fa-star fa-spin fa-1x fa-fw "></i> <strong>WINS:</strong> 1 
+		  		<i id="wins" class="far fa-star fa-spin fa-1x fa-fw "></i> <strong>WINS:</strong> 1 
+		  		<p id = "messages">  </p>
 
 		  </div>
 		</div>
