Add Guessed Letters update

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 				<p> <strong>Number of Guesses Remaining:</strong> </p>
 				<p id="guessesRemaining"> </p>
 		  </div>
-		  <div class="lettersGuessed">
-				<p id="lettersGuessed"> <strong>Letters Guessed:</strong> A,</p>
+		  <div class="letters-guessed">
+				<p> <strong>Letters Guessed:</strong> </p>
+				<p id="lettersGuessed"> </p>
 		  </div>
 		  <div class="wins">
 		  		<i id="wins" class="far fa-star fa-spin fa-1x fa-fw "></i> <strong>WINS:</strong> 1 
@@ -83,8 +84,10 @@
 		    <p>Copyright &copy; 2017 JoAnn Enos</p>
 		  </nav>
 	</div>
-	</footer>
 	<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+
+	</footer>
+	
 </body>
 </html>
 
