--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 				    <ul class="list-group">
 				      <li class="list-group-item">Name</li>
 				      <li class="list-group-item">Now Playing!</li> 
+				      	<audio id="player" controls autoplay>
+				      		<source src="assets/audio/All_The_Best.mp3" type="audio/mpeg">
+				      	</audio>
 				      <li class="list-group-item">Short History</li> 
 			    	</ul>
 				  </div>
