Update audio for mp3

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Hangman Game</title>
-	<!-- Place this defer code, which contains everything you need, within the <head> of each template or page that you want to use Font Awesome on. -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.1/js/all.js"></script>
 	<script src="assets/javascript/game.js"></script>
 	
@@ -14,8 +13,6 @@
 </head>
 
 <body>
-<!-- Sample brand icon -->
-<!-- <i class="fab fa-github-square"></i>  -->
 
 <div class="container text-center">
 	<h2> Country Music Hangman</h2>
@@ -51,7 +48,7 @@
 				    <ul class="list-group">
 				      <li class="list-group-item">Name</li>
 				      <li class="list-group-item">Now Playing!</li> 
-				      <!-- removed autoply for now -->
+				      <!-- removed autoplay for now -->
 				      	<audio id="player" controls> 
 				      		<source src="assets/audio/All_The_Best.mp3" type="audio/mpeg">
 				      	</audio>
