Partial fix for WINS - still needs numeric update fix.

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 				  <p id="lettersGuessed"> </p>
 			</div>
 			<div class="wins">
-				<i class="far fa-star fa-spin fa-1x fa-fw "></i> <strong>WINS: </strong>  
-				<p id="wins">  </p>
+				<i class="far fa-star fa-spin fa-1x fa-fw "></i> <strong id="wins"> WINS: </strong>  
+				<!-- <p id="wins">  </p> -->
 		  	<p id="messages">  </p>
 		  </div>
 		</div>
@@ -50,7 +50,7 @@
 				      <li class="list-group-item">Now Playing!</li> 
 				      <!-- removed autoplay for now -->
 				      	<audio id="player" controls> 
-				      		<source src="assets/audio/All_The_Best.mp3" type="audio/mpeg">
+				      		<source src="assets/audio/On_The_Road_Again.mp3" type="audio/mpeg">
 				      	</audio>
 				      <li class="list-group-item">Short History</li> 
 			    	</ul>
