--- a/index.html
+++ b/index.html
@@ -46,15 +46,15 @@
 				      <li class="list-group-item">Name</li>
 				      <li class="list-group-item">Now Playing!</li> 
 				      <!-- removed autoplay for now -->
-				      	<audio id="player" controls> 
-				      		<!-- <source src="assets/audio/On_The_Road_Again.mp3" type="audio/mpeg"> -->
+				      	<audio class="player" controls> 
+				      		<source src="assets/audio/On_The_Road_Again.mp3" type="audio/mpeg">
 				      	</audio>
 				      <li class="list-group-item">Short History</li> 
 			    	</ul>
 				  </div>
 					<div class="media-right">
 
-						<img class="countryPic media-object" src="http://d2s4ckmcfyogn8.cloudfront.net/sites/default/files/header_main_images/country-western-music-eps-23986846.jpg"  alt="Country Music images" height="150" width="150">
+						<img class="countryPic media-object" src="http://d2s4ckmcfyogn8.cloudfront.net/sites/default/files/header_main_images/country-western-music-eps-23986846.jpg"  alt="Country Music images" height="150" width="150"> 
 
 						<!-- <img class="countryPic media-object" src="http://calcoastnews.com/images/2011/01/willie_nelson1.jpg" alt="Willie Nelson" height="150" width="150">
 
