Update About the Musician

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				  <div class="media-body">
 				    <h5 class="mt-0">About the Musicians</h5>
 				    <ul class="list-group">
-				      <li class="list-group-item">Name</li>
+				      <li class="list-group-item name"> Name: </li>
 				      <li class="list-group-item">Now Playing!</li> 
 				      <!-- removed autoplay for now -->
 				      	<audio class="player" controls> 
