Add Short History

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				      	<audio class="player" controls> 
 				      		<source src="assets/audio/On_The_Road_Again.mp3" type="audio/mpeg">
 				      	</audio>
-				      <li class="list-group-item">Short History</li> 
+				      <li class="list-group-item history">Short History</li> 
 			    	</ul>
 				  </div>
 					<div class="media-right">
