Fix issue with Iris mp3 access.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 				    <h5 class="mt-0">About the Musicians</h5>
 				    <ul class="list-group">
 				      <li class="list-group-item name"> Name: </li>
-				      <li class="list-group-item">Now Playing!</li> 
+				      <li class="list-group-item playing" >Now Playing!</li> 
 				      <!-- removed autoplay for now -->
 				      	<audio class="player" controls> 
 				      		<source src="assets/audio/On_The_Road_Again.mp3" type="audio/mpeg">
